--- a/styles.css
+++ b/styles.css
@@ -128,23 +128,20 @@
     height: 200px;
     cursor: pointer;
     animation: showImage;
-    animation-duration: 300ms;
+    animation-duration: .25s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
+    transform-origin: top center;
 }
 
 @keyframes showImage {
     0% {
         opacity: 0;
-        transform: scale(0);
-    }
-    50% {
-        opacity: 0.5;
-        transform: scale(1.5);
+        transform: rotateX(90deg);
     }
     100% {
         opacity: 1;
-        transform: scale(1);
+        transform: rotateX(0deg);
     }
 
 }
