--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,13 @@
     border-radius: 5px;
 }
 
+#match {
+    font-weight: bold;
+    text-transform: uppercase;
+    color: green;
+    text-align: center;
+}
+
 @media screen and (max-width: 600px) {
     #cards_cont {
         width: 100%;
